// CRM Omnichannel Imobiliário — modelo de dados (DBML, agnóstico de banco)
// Renderize/edite em https://dbdiagram.io ou com a extensão DBML.
// Convenções: snake_case; toda tabela tem tenant_id, created_at, updated_at.
// FKs no padrão <entidade>_id. Ver docs/02-modelo-de-dados.md.

Project crm_omnichannel_imobiliario {
  database_type: 'PostgreSQL'
  Note: 'Especificação agnóstica. Tipos são referência; ajustar ao banco escolhido.'
}

// ============================================================
// IDENTIDADE E ORGANIZAÇÃO
// ============================================================

Table users {
  id uuid [pk]
  tenant_id uuid [not null]
  name varchar [not null]
  email varchar [not null, unique]
  phone varchar
  status varchar [note: 'ativo | inativo']
  avatar_url varchar
  push_token varchar [note: 'token de notificação push (D2)']
  push_validated_at timestamp [note: 'confirmado por teste de entrega (D2)']
  last_seen_at timestamp
  presence varchar [note: 'online | offline | typing']
  created_at timestamp
  updated_at timestamp
  indexes {
    (tenant_id)
    email [unique]
  }
}

Table roles {
  id uuid [pk]
  tenant_id uuid [not null]
  name varchar [not null, note: 'Admin | Gerente | Corretor | custom']
  is_system boolean
}

Table permissions {
  id uuid [pk]
  key varchar [not null, unique, note: 'ex: lead.transfer, proposal.approve']
  domain varchar [note: 'leads | conversations | ...']
  description varchar
}

Table role_permissions {
  role_id uuid [ref: > roles.id]
  permission_id uuid [ref: > permissions.id]
  scope varchar [not null, note: 'self | team | all']
  indexes {
    (role_id, permission_id) [pk]
  }
}

Table user_roles {
  user_id uuid [ref: > users.id]
  role_id uuid [ref: > roles.id]
  indexes {
    (user_id, role_id) [pk]
  }
}

Table teams {
  id uuid [pk]
  tenant_id uuid [not null]
  name varchar [not null]
}

Table team_members {
  team_id uuid [ref: > teams.id]
  user_id uuid [ref: > users.id]
  role_in_team varchar [note: 'member | manager']
  indexes {
    (team_id, user_id) [pk]
  }
}

Table shifts {
  id uuid [pk]
  tenant_id uuid [not null]
  team_id uuid [ref: > teams.id]
  user_id uuid [ref: > users.id]
  location varchar
  starts_at timestamp
  ends_at timestamp
  recurrence varchar [note: 'regra de recorrência (ex: RRULE)']
}

// ============================================================
// NÚCLEO COMERCIAL — LEAD
// ============================================================

Table leads {
  id uuid [pk]
  tenant_id uuid [not null]
  code varchar [not null, unique, note: 'código único legível, ex LD-2026-004512']
  name varchar [not null, note: 'sanitizado — sem lixo de assinatura (D3)']
  phone varchar [note: 'E.164, validado (D3)']
  email varchar [note: 'validado (D3)']
  entered_at timestamp
  estimated_value numeric
  source_id uuid [ref: > lead_sources.id]
  tracking_source varchar [note: 'portal | site | social | indicação']
  campaign_id uuid [ref: > campaigns.id]
  temperature varchar [note: 'frio | morno | quente']
  stage_id uuid [ref: > funnel_stages.id]
  loss_reason_id uuid [ref: > loss_reasons.id, note: 'nullable']
  responsible_broker_id uuid [ref: > users.id]
  last_interaction_at timestamp
  last_interaction_channel varchar
  next_task_id uuid [note: 'ref lógica p/ tasks.id; nullable (D1)']
  duplicate_of uuid [ref: > leads.id, note: 'nullable — aponta p/ o original (D4)']
  dedupe_status varchar [note: 'unique | suspect | merged']
  notes text
  created_at timestamp
  updated_at timestamp
  indexes {
    (tenant_id)
    (responsible_broker_id)
    (stage_id)
    phone
    email
  }
}

Table lead_interests {
  lead_id uuid [ref: > leads.id]
  development_id uuid [ref: > developments.id]
  property_id uuid [ref: > properties.id, note: 'nullable']
  priority int
  indexes {
    (lead_id, development_id) [pk]
  }
}

Table lead_tags {
  lead_id uuid [ref: > leads.id]
  tag varchar
  indexes {
    (lead_id, tag) [pk]
  }
}

Table lead_transfers {
  id uuid [pk]
  lead_id uuid [ref: > leads.id]
  from_broker_id uuid [ref: > users.id]
  to_broker_id uuid [ref: > users.id]
  reason varchar
  by_user_id uuid [ref: > users.id]
  via_rule_id uuid [ref: > distribution_rules.id, note: 'nullable']
  created_at timestamp
}

Table timeline_events {
  id uuid [pk]
  lead_id uuid [ref: > leads.id]
  type varchar [not null, note: 'message | stage_change | task | transfer | note | system']
  channel varchar [note: 'nullable']
  actor_id uuid [ref: > users.id]
  payload json
  occurred_at timestamp
  indexes {
    (lead_id, occurred_at)
  }
}

// ============================================================
// OMNICHANNEL — CONVERSA E MENSAGEM
// ============================================================

Table channels {
  id uuid [pk]
  tenant_id uuid [not null]
  type varchar [not null, note: 'whatsapp | instagram | messenger | email | webchat']
  identity varchar [note: 'nº WABA, @handle, caixa de e-mail...']
  owner_user_id uuid [ref: > users.id, note: 'nullable']
  status varchar
  credentials_ref varchar [note: 'referência a segredo em cofre — nunca o segredo em claro']
}

Table conversations {
  id uuid [pk]
  tenant_id uuid [not null]
  lead_id uuid [ref: > leads.id]
  channel_id uuid [ref: > channels.id]
  assigned_broker_id uuid [ref: > users.id]
  status varchar [note: 'open | pending | closed']
  unread_count int
  last_message_at timestamp
  wa_window_expires_at timestamp [note: 'janela de 24h do WhatsApp']
  indexes {
    (lead_id)
    (assigned_broker_id, status)
  }
}

Table messages {
  id uuid [pk]
  conversation_id uuid [ref: > conversations.id]
  direction varchar [not null, note: 'in | out']
  external_id varchar [note: 'idempotência de webhook — dedup']
  sender varchar
  content_type varchar [note: 'text | image | audio | doc | template']
  body text
  media_url varchar
  template_id uuid [ref: > message_templates.id, note: 'nullable']
  status varchar [note: 'sent | delivered | read | failed']
  occurred_at timestamp
  indexes {
    (conversation_id, occurred_at)
    external_id [unique]
  }
}

Table message_templates {
  id uuid [pk]
  tenant_id uuid [not null]
  channel_type varchar
  name varchar
  category varchar
  body text
  variables json
  wa_approval_status varchar [note: 'aprovação Meta p/ templates WhatsApp']
  active boolean
}

// ============================================================
// PRODUTOS
// ============================================================

Table developers {
  id uuid [pk]
  tenant_id uuid [not null]
  name varchar [not null]
  cnpj varchar [note: 'validado; chave anti-duplicidade (D4)']
  contact varchar
  indexes {
    (tenant_id, cnpj) [unique]
  }
}

Table developments {
  id uuid [pk]
  tenant_id uuid [not null]
  developer_id uuid [ref: > developers.id]
  name varchar [not null]
  type varchar [note: 'lançamento | em obra | pronto']
  address varchar
  city varchar
  region varchar
  status varchar
  vgv numeric [note: 'valor geral de vendas']
  normalized_key varchar [note: 'nome normalizado p/ dedupe (D4)']
  indexes {
    (tenant_id, normalized_key)
  }
}

Table properties {
  id uuid [pk]
  tenant_id uuid [not null]
  development_id uuid [ref: > developments.id, note: 'nullable']
  code varchar
  type varchar
  price numeric
  area numeric
  bedrooms int
  status varchar [note: 'disponível | reservado | vendido']
}

// ============================================================
// FUNIL, TAREFAS E PROPOSTAS
// ============================================================

Table funnel_stages {
  id uuid [pk]
  tenant_id uuid [not null]
  name varchar [not null]
  order int
  is_won boolean
  is_lost boolean
  sla_hours int [note: 'opcional — alerta de estagnação']
}

Table lead_sources {
  id uuid [pk]
  tenant_id uuid [not null]
  name varchar [not null]
  active boolean
}

Table loss_reasons {
  id uuid [pk]
  tenant_id uuid [not null]
  name varchar [not null]
  active boolean
}

Table campaigns {
  id uuid [pk]
  tenant_id uuid [not null]
  name varchar [not null]
  active boolean
}

Table qualification_scripts {
  id uuid [pk]
  tenant_id uuid [not null]
  name varchar [not null]
  body text
  active boolean
}

Table tasks {
  id uuid [pk]
  tenant_id uuid [not null]
  lead_id uuid [ref: > leads.id]
  broker_id uuid [ref: > users.id]
  type varchar [note: 'ligação | visita | follow-up']
  title varchar
  due_at timestamp
  status varchar [note: 'pending | done | overdue | scheduled']
  done_at timestamp
  indexes {
    (broker_id, status, due_at)
    (lead_id)
  }
}

Table proposals {
  id uuid [pk]
  tenant_id uuid [not null]
  lead_id uuid [ref: > leads.id]
  property_id uuid [ref: > properties.id]
  value numeric
  status varchar [note: 'draft | pending_approval | approved | rejected']
  approved_by uuid [ref: > users.id, note: 'nullable']
  created_by uuid [ref: > users.id]
}

// ============================================================
// DISTRIBUIÇÃO, QUALIDADE E AUDITORIA
// ============================================================

Table distribution_rules {
  id uuid [pk]
  tenant_id uuid [not null]
  name varchar
  type varchar [note: 'manual | queue | roleta | grab | auto']
  criteria json [note: 'região, empreendimento, carga, plantão']
  priority int
  active boolean
}

Table distribution_log {
  id uuid [pk]
  lead_id uuid [ref: > leads.id]
  rule_id uuid [ref: > distribution_rules.id]
  assigned_broker_id uuid [ref: > users.id]
  decision_reason varchar
  created_at timestamp
  indexes {
    (lead_id)
  }
}

Table dedupe_candidates {
  id uuid [pk]
  entity_type varchar [note: 'lead | development | developer']
  entity_id uuid
  match_entity_id uuid
  match_score numeric
  match_fields json
  status varchar [note: 'open | merged | ignored']
}

Table audit_log {
  id uuid [pk]
  tenant_id uuid [not null]
  actor_id uuid [ref: > users.id]
  action varchar [not null, note: 'ex: lead.stage_changed, data.exported, lead.transferred']
  entity_type varchar
  entity_id uuid
  before json
  after json
  ip varchar
  occurred_at timestamp
  Note: 'APPEND-ONLY: sem UPDATE/DELETE. Idealmente particionado por data (D5).'
  indexes {
    (tenant_id, occurred_at)
    (actor_id)
    (entity_type, entity_id)
  }
}
